fixed partial hash tree generation (now represents path to root)